[package]
name = "pt-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serde_json= "1.0.94"
shell-words="1.1.0"
serde = { version = "1.0.158", features = ["derive"] }
tokio-socks="0.5.1"
